Updates with Linux rpm build

--- a/linux/menu/project-tracker.desktop
+++ b/linux/menu/project-tracker.desktop
@@ -5,7 +5,7 @@
 
 [Desktop Entry]
 Type=Application
-Name=Freelance System
+Name=Track Projects
 Icon=/usr/share/icons/Adwaita/32x32/status/appointment-soon.png
 Exec=gnome-terminal --geometry=129x30 --title="Freelance" -e "python3 /opt/project-tracker/freelance.py"
 Categories=Project_Tracker
