Updates to rpmbuild

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ build/project-tracker-staging/
 build/third-party-python/fpdf/fpdf-install-1.7.2.tar.gz
 build/project-tracker.tar.gz
 build/deb/project-tracker*
+project-tracker*.rpm
