GH-6: Add More Options for Invoicing Schedule

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ build/third-party-python/fpdf/fpdf-install-1.7.2.tar.gz
 build/project-tracker.tar.gz
 build/deb/project-tracker*
 project-tracker*.rpm
+python/__pycache__/
